# EcsTest

./: CMakeLists.txt  EcsTest.cpp  LICENSE  README.md
Components/: Glyph.hpp  Position.hpp  Vector.hpp  Velocity.hpp
ECS/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  Entity.hpp  EntityManager.hpp  Signature.hpp  System.hpp  SystemManager.hpp
Systems/: PhysicsSystem.hpp  RenderSystem.hpp
